# mobilenet-classifier-on-minikube

./: .todo  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  model.py
backend/k8s/: deployment.yml  service.yml
backend/mobilenet_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  next.config.mjs
frontend/app/: layout.tsx  page.tsx
frontend/components/: image-preview-modal.tsx  image-uploader.tsx
frontend/lib/: utils.ts
k8s/: backend-deployment.yaml  backend-deployment.yml  backend-service.yaml  frontend-deployment.yaml  frontend-deployment.yml  frontend-service.yaml  ingress.yaml  ingress.yml
